Conversion auto avec les types de données
- Affichage du symbole monétaire en fonction du code devise
- Validation des données d'un formulaire lors de la saisie

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -13,11 +13,14 @@ formVendorTitle = Ajouter un fournisseur
 layoutPublishButton = Publier
 layoutDraftButton = Sauvegarder le brouillon
 
-# Onglet "Liste des fournisseurs (oData)"
-listVendorTitleOData = Liste des fournisseurs (oData)
+# Onglet "Liste des fournisseurs avec capacité (oData)"
+listVendorCapacityTitle = Liste des fournisseurs avec capacité (oData)
 formatterCapacityLow = Capacité < 500
 formatterCapacityMedium = Capacité entre 500 et 1000
 formatterCapacityHigh = Capacité > 1000
+
+# Onglet "Liste des fournisseurs avec prix (JSON)"
+listVendorPriceTitle = Liste des fournisseurs avec prix (JSON)
 
 # Fiche fournisseur
 vendor = Fournisseur
@@ -29,3 +32,4 @@ postalCodeVendor = Code postal
 countryVendor = Pays
 countryGermany = Allemagne
 countryFrance = France
+priceVendor = Prix
