Utilisation des filtres, des tris et des groupes sur une liste

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -2,6 +2,7 @@
 # exempleWithParameter = Hello {0} {1}
 appTitle = Application MVC
 appDescription = Une application MVC
+listVendor = Liste des fournisseurs
 
 # Onglet "Liste des fournisseurs (JSON)"
 listVendorTitle = Liste des fournisseurs (JSON)
