Création du dossier test4 - Formulaire

--- a/test2/webapp/i18n/i18n.properties
+++ b/test2/webapp/i18n/i18n.properties
@@ -6,9 +6,9 @@ headerTitle = Liste des fournisseurs
 
 # Onglet "Pagination, formatter"
 paginationFormatterTitle = Pagination, formatter
-formatterPriceLow = Prix < 500
-formatterPriceMedium = Prix entre 500 et 1000
-formatterPriceHigh = Prix > 1000
+formatterPriceLow = Tarif < 500
+formatterPriceMedium = Tarif entre 500 et 1000
+formatterPriceHigh = Tarif > 1000
 
 # Onglet "Tri, groupe, filtre ...""
 sortGroupFilterTitle = Tri, groupe, filtre ...
