--- a/test3/webapp/i18n/i18n.properties
+++ b/test3/webapp/i18n/i18n.properties
@@ -9,4 +9,4 @@ elementBindingTitle = Element Binding
 detailVendorTitle = Détail du fournisseur
 idVendor = Identifiant
 nameVendor = Nom
-priceVendor = Prix
+priceVendor = Tarif
